--- a/base/frontend-deployment.yaml
+++ b/base/frontend-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: demo-frontend
-          image: 438258389050.dkr.ecr.ap-northeast-2.amazonaws.com/demo-frontend:latest
+          image: 438258389050.dkr.ecr.us-east-1.amazonaws.com/demo-frontend:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 80
