--- a/base/frontend-service.yaml
+++ b/base/frontend-service.yaml
@@ -2,12 +2,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: demo-frontend
+  name: virginia-frontend
   annotations:
-    alb.ingress.kubernetes.io/healthcheck-path: "/"
+    alb.ingress.kubernetes.io/healthcheck-path: "/contents"
 spec:
   selector:
-    app: demo-frontend
+    app: virginia-frontend
   type: NodePort
   ports:
     - protocol: TCP
