--- a/base/frontend-service.yaml
+++ b/base/frontend-service.yaml
@@ -2,12 +2,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: virginia-frontend
+  name: seoul-frontend
   annotations:
     alb.ingress.kubernetes.io/healthcheck-path: "/contents"
 spec:
   selector:
-    app: virginia-frontend
+    app: seoul-frontend
   type: NodePort
   ports:
     - protocol: TCP
